--- a/portfolio-detailschat.html
+++ b/portfolio-detailschat.html
@@ -46,7 +46,7 @@
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
 
-        <h2>Al-Mushaf | Quran</h2>
+        <h2>Chat-App</h2>
         <div class="row gy-4">
 
           <div class="col-lg-8">
@@ -75,8 +75,8 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Mobile App</li>
-                <li><strong>Tools</strong>: Flutter | Quran API  </li>
-                <li><strong>Project date</strong>: 07 May, 2023</li>
+                <li><strong>Tools</strong>: Flutter | Firebase  </li>
+                <li><strong>Project date</strong>: 08 August, 2023</li>
                 <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
               </ul>
             </div>
