chat app desc added and also mockupsmove into imgs

--- a/portfolio-detailschat.html
+++ b/portfolio-detailschat.html
@@ -54,15 +54,16 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="Mockups/Mockups/Chatapp/APPMOCKUP-1.png" alt="">
+                  <img src="assets/img/Mockups/Mockups/Chatapp/APPMOCKUP-1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="Mockups/Mockups/Chatapp/APPMOCKUP1.png" alt="">
+                  <img src="assets/img/Mockups/Mockups/Chatapp/APPMOCKUP1.png" alt="">
                 </div>
-                
+
                 <div class="swiper-slide">
-                  <img src="Mockups/Mockups/Chatapp/APPMOCKUP-2.png" alt="">
+                  <img src="assets/img/Mockups/Mockups/Chatapp/APPMOCKUP-2.png" alt="">
+
                 </div>
 
               </div>
@@ -75,32 +76,31 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Mobile App</li>
-                <li><strong>Tools</strong>: Flutter | Firebase  </li>
+                <li><strong>Tools</strong>: Flutter | Firebase </li>
                 <li><strong>Project date</strong>: 08 August, 2023</li>
                 <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
               </ul>
             </div>
-            
+
           </div>
 
         </div>
-        <!-- <div class="row gy-4">
-        <div class="portfolio-description">
-          <h2>Project Description</h2>
+        <div class="row gy-4">
+          <div class="portfolio-description">
+            <h2>Project Description</h2>
 
-          <ol>
-            <li>Quran Text Display: Display the Quranic verses in an elegant and readable format with options for
-              various translations and Arabic scripts.</li>
-            <li>Audio Quran Integration: Utilize a suitable package (e.g., audioplayers) to seamlessly integrate the
-              audio recitation of the Quran with options for different reciters.</li>
-            <li>Audio Controls Placement: Position audio playback controls (play, pause, volume) conveniently on the
-              screen for easy access while listening to Quranic recitations.</li>
-            <li>Gesture Controls: Enable swipe gestures for easy page-turning or verse-scrolling within the app.</li>
-            <li>Progress Indicator: Display a progress bar or indicator to show users their current location within the
-              Quranic text and audio.</li>
-          </ol>
-        </div> -->
-      </div>
+            <ol>
+              <li>Developed a visually appealing and user-friendly chat app user interface using Flutter.</li>
+              <li>Incorporated captivating animations for the app's splash screen.</li>
+              <li>Utilized onboarding packages for the integrating onboarding screen for smooth onboarding experience.
+              </li>
+              <li>Consists of a dynamic tab bar to efficiently manage contacts and chats. Users can seamlessly switch
+                between the 'Contacts' tab to view their list of contacts and the 'Chats' tab to access their ongoing
+                conversations. This intuitive navigation enhances user experience and simplifies interaction within the
+                app.</li>
+            </ol>
+          </div>
+        </div>
       </div>
     </section><!-- End Portfolio Details Section -->
 
